# streamdeck-daemon

./: .gitignore  Pipfile  README.md  Streamdeck.py  example.yaml  pyproject.toml  setup.py
.github/workflows/: master-workflow.yml  other-workflow.yml  python-package.yml  python-publish.yml
actions/: brightness.py  command.py  launch.py  shortcut.py
streamdeck/config/: configuration.py
streamdeck/handlers/: action_handler.py  key_handler.py  ui_handler.py  view_handler.py
streamdeck/logging/: logger.py
streamdeck/plugins/: action.py
streamdeck_daemon/: streamdeck.py
streamdeck_daemon/config/: configuration.py
streamdeck_daemon/handlers/: action_handler.py  key_handler.py  ui_handler.py  view_handler.py
streamdeck_daemon/plugins/: brightness.py  command.py  hue.py  launch.py  obs.py  page.py  shortcut.py
tests/: action_handler_test.py  base.py  default_actions_test.py  key_handler_test.py  view_handler_test.py
